src/main.module.scss
@import "styles/fonts.scss";

* {
  box-sizing: border-box;
}

body {
  margin: 0;
  height: 100vh;
  overflow-y: hidden;
}

h1 {
  font-family: $primary_font;
}

p {
  font-family: $secondary_font;
  font-size: 1rem;
}

